# baseplate

./: CONTRACT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dist  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: cxpak.rs  java_test.rs  lib.rs  main.rs  model.rs  paths.rs  patterns.rs  registry.rs  trace.rs
