[package]
name = "baseplate"
version = "0.2.1"
edition = "2021"
rust-version = "1.94"
description = "Shared substrate for agentic-harness tooling — model registry, trace types, path resolution, a cxpak MCP client, and Java-test detection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Barnett-Studios/baseplate"
readme = "README.md"
keywords = ["llm", "agent", "harness", "mcp", "cxpak"]
categories = ["development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# `cli` gates the `baseplate` query binary (ADR-0054). Off by default, so library
# consumers (the compile-time substrate role) pull in no extra build; the release
# image builds with `--features cli`. No extra dependencies — it uses serde/serde_json
# and the crate's own registry/patterns/java_test modules.
cli = []

# The substrate's genuinely-invocable query ops as a one-shot CLI. Only built under
# `--features cli`, so a plain library consume is unchanged.
[[bin]]
name = "baseplate"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
async-trait = "0.1"
indexmap = "2"
libc = "0.2"
once_cell = "1"
regex = "1"
rmcp = { version = "2", features = ["client", "transport-child-process"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "float_roundtrip"] }
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "time", "process", "io-util", "sync"] }
